--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/LoginView.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/LoginView.fxml
@@ -15,7 +15,7 @@
             <PasswordField fx:id="tfSenha" layoutX="175.0" layoutY="229.0" prefHeight="38.0" prefWidth="279.0" promptText="Senha" />
             <Button layoutX="267.0" layoutY="464.0" mnemonicParsing="false" onAction="#btnCadastro" prefHeight="38.0" prefWidth="95.0" text="Cadastrar" />
             <TextField fx:id="tfID" layoutX="175.0" layoutY="281.0" prefHeight="38.0" prefWidth="279.0" promptText="ID" />
-            <Slider fx:id="sldSalario" layoutX="175.0" layoutY="329.0" prefHeight="38.0" prefWidth="279.0" />
+            <Slider fx:id="slSalario" layoutX="175.0" layoutY="329.0" majorTickUnit="500.0" max="10000.0" prefHeight="38.0" prefWidth="279.0" showTickLabels="true" showTickMarks="true" value="1000.0" />
             <ChoiceBox fx:id="cbCargos" layoutX="175.0" layoutY="391.0" prefHeight="38.0" prefWidth="279.0" />
             <Button layoutX="151.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnApagarBancodeDados" prefHeight="80.0" prefWidth="328.0" style="-fx-background-color: red;" text="Apagar o Banco de Dados kkkkkkkkkkkkk calma estagiario" />
          </children>
