--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.LoginController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.LoginController">
    <center>
       <StackPane prefHeight="467.0" prefWidth="650.0" BorderPane.alignment="CENTER">
          <children>
@@ -79,6 +84,7 @@
                               </Button>
                            </children>
                         </VBox>
+                        <Button layoutX="110.0" layoutY="287.0" mnemonicParsing="false" onAction="#btn_candidatura" prefHeight="38.0" prefWidth="198.0" text="Sou Candidato" textFill="WHITE" />
                      </children>
                   </AnchorPane>
                </children>
