--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -18,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.LoginController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.LoginController">
    <center>
       <StackPane prefHeight="467.0" prefWidth="650.0" BorderPane.alignment="CENTER">
          <children>
@@ -62,14 +57,14 @@
                                     <Font name="Arial Black" size="37.0" />
                                  </font>
                               </Label>
-                              <Label alignment="CENTER" prefHeight="55.0" prefWidth="351.0" text="seja bem vindo ai ao recrutador ai fodase" textFill="#652f90">
+                              <Label alignment="CENTER" prefHeight="55.0" prefWidth="351.0" text="Seja bem vindo ao recrutador" textFill="#652f90">
                                  <font>
                                     <Font name="Arial" size="15.0" />
                                  </font>
                               </Label>
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER" layoutX="86.0" layoutY="167.0" prefHeight="131.0" prefWidth="245.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="86.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="167.0">
+                        <VBox alignment="CENTER" layoutX="86.0" layoutY="155.0" prefHeight="146.0" prefWidth="243.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="86.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="155.0">
                            <children>
                               <Button fx:id="btn_login" mnemonicParsing="false" onAction="#changeTabLogin" prefHeight="40.0" prefWidth="195.0" text="Login" textFill="WHITE">
                                  <font>
@@ -82,9 +77,20 @@
                                     <Font name="Arial Black" size="12.0" />
                                  </font>
                               </Button>
+                              <Separator orientation="VERTICAL" prefHeight="20.0" visible="false" />
+                              <Button fx:id="btn_cadastro1" mnemonicParsing="false" onAction="#changeTabCadastro" prefHeight="40.0" prefWidth="195.0" text="Sou candidato" textFill="WHITE">
+                                 <font>
+                                    <Font name="Arial Black" size="12.0" />
+                                 </font>
+                              </Button>
+                              <Separator orientation="VERTICAL" prefHeight="20.0" visible="false" />
+                              <Button fx:id="btn_login1" mnemonicParsing="false" onAction="#btn_recrutamento" prefHeight="40.0" prefWidth="195.0" text="Sou recrutador" textFill="WHITE">
+                                 <font>
+                                    <Font name="Arial Black" size="12.0" />
+                                 </font>
+                              </Button>
                            </children>
                         </VBox>
-                        <Button layoutX="110.0" layoutY="287.0" mnemonicParsing="false" onAction="#btn_candidatura" prefHeight="38.0" prefWidth="198.0" text="Sou Candidato" textFill="WHITE" />
                      </children>
                   </AnchorPane>
                </children>
