--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
@@ -60,7 +60,7 @@
                                        </VBox.margin>
                                     </ChoiceBox>
                                     <Separator orientation="VERTICAL" prefHeight="10.0" visible="false" />
-                                    <Label fx:id="mensagem_erro" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" textFill="#e41111">
+                                    <Label fx:id="mensagem_erro2" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" textFill="#e41111">
                                        <font>
                                           <Font name="System Bold" size="12.0" />
                                        </font>
