--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
@@ -112,7 +112,7 @@
             </StackPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="criacaoVagaJanela" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="criacaoVagaJanela" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: rgba(0,0,0,0.5);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="422.0" layoutY="105.0" prefHeight="437.0" prefWidth="414.0" styleClass="telaaction">
                <children>
@@ -123,7 +123,7 @@
                               <Font name="System Bold" size="36.0" />
                            </font>
                         </Label>
-                        <Separator orientation="VERTICAL" prefHeight="50.0" />
+                        <Separator orientation="VERTICAL" prefHeight="30.0" />
                         <TextField fx:id="cv_cargo" promptText="Cargo" styleClass="lineedit">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
@@ -140,6 +140,11 @@
                            </VBox.margin>
                         </TextField>
                         <TextField fx:id="cv_departamento" promptText="Departamento" styleClass="lineedit">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <TextField fx:id="cv_regime" promptText="Regime" styleClass="lineedit">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
