--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -25,33 +25,33 @@
          <children>
             <HBox layoutX="37.0" layoutY="38.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <ToolBar orientation="VERTICAL" prefHeight="678.0" prefWidth="158.0">
-                    <items>
-                      <Button fx:id="vagas_btn" mnemonicParsing="false" onAction="#abrirVagas" prefHeight="35.0" prefWidth="165.0" text="Vagas" textFill="WHITE" />
-                        <Button fx:id="pedidos_btn" mnemonicParsing="false" onAction="#abrirContratacoes" prefHeight="35.0" prefWidth="165.0" text="Pedidos de Contrataçao" textFill="WHITE" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Gerar Relatorio" textFill="WHITE" />
-                        <Button mnemonicParsing="false" onAction="#gerarf" prefHeight="35.0" prefWidth="165.0" text="Gerar Folha de Pagamento" textFill="WHITE">
+                  <VBox spacing="5.0" styleClass="tool-bar">
+                     <children>
+                      <Button fx:id="vagas_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#abrirVagas" prefHeight="35.0" prefWidth="165.0" text="Vagas" textFill="WHITE" />
+                        <Button fx:id="pedidos_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#abrirContratacoes" prefHeight="35.0" prefWidth="165.0" text="Pedidos de Contrataçao" textFill="WHITE" />
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Gerar Relatorio" textFill="WHITE" />
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gerarf" prefHeight="35.0" prefWidth="165.0" text="Gerar Folha de Pagamento" textFill="WHITE">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#exporterma" prefHeight="35.0" prefWidth="165.0" text="Exportar Folha" textFill="WHITE" />
-                        <Separator orientation="VERTICAL" prefHeight="390.0" visible="false" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE" />
-                    </items>
-                  </ToolBar>
-                  <VBox>
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exporterma" prefHeight="35.0" prefWidth="165.0" text="Exportar Folha" textFill="WHITE" />
+                        <Region prefHeight="400.0" prefWidth="165.0" />
+                        <Button fx:id="btn_sair" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sair" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER">
                      <children>
                         <Separator orientation="VERTICAL" prefHeight="5.0" visible="false" />
                         <HBox alignment="CENTER" prefHeight="26.0" prefWidth="385.0">
                            <children>
                               <TextField prefHeight="30.0" prefWidth="1000.0" promptText="Buscar" styleClass="lineedit" />
                               <Separator prefWidth="40.0" visible="false" />
-                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="76.0" text="Procurar" textFill="WHITE" />
+                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="75.0" text="Procurar" textFill="WHITE" />
                            </children>
                         </HBox>
-                        <Separator orientation="VERTICAL" prefHeight="15.0" visible="false" />
-                        <AnchorPane>
+                        <Separator orientation="VERTICAL" prefHeight="10.0" visible="false" />
+                        <AnchorPane prefHeight="618.0" prefWidth="1037.0">
                            <children>
                               <TableView fx:id="tabela_vagas" layoutX="13.0" layoutY="13.0" prefHeight="631.0" prefWidth="943.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columns>
