Listagem de Candidatos e getAllUsuarios
Agora quando tu entra na tela de recrutador e clica em Listar candidatos aparecem todos os candidatos.
Add tbm um metodo em database que retorna uma lista com todos os usuarios

--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
@@ -1,77 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@../Admin/admin.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.RecrutamentoController">
-   <children>
-      <AnchorPane layoutX="44.0" layoutY="36.0" prefHeight="678.0" prefWidth="1228.0" styleClass="telaaction" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="21.0">
-         <children>
-            <HBox layoutX="291.0" layoutY="56.0" prefHeight="678.0" prefWidth="1228.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <ToolBar nodeOrientation="LEFT_TO_RIGHT" orientation="VERTICAL" prefHeight="678.0" prefWidth="158.0">
-                    <items>
-                      <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Cadastrar" textFill="WHITE">
-                           <font>
-                              <Font name="Arial" size="13.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Agendar entrevista" textFill="#f5f3f4">
-                           <font>
-                              <Font size="13.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Solicitar contratação" textFill="WHITE">
-                           <font>
-                              <Font size="13.0" />
-                           </font>
-                        </Button>
-                        <Separator orientation="VERTICAL" prefHeight="460.0" visible="false" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE">
-                           <font>
-                              <Font size="13.0" />
-                           </font>
-                        </Button>
-                    </items>
-                  </ToolBar>
-                  <Separator orientation="VERTICAL" prefWidth="200.0" visible="false" />
-                  <VBox prefHeight="325.0" prefWidth="715.0">
-                     <children>
-                        <HBox alignment="CENTER" minHeight="50.0" minWidth="1030.0" prefHeight="35.0" prefWidth="1200.0">
-                           <children>
-                              <TextField prefHeight="30.0" prefWidth="1000.0" promptText="Buscar" styleClass="lineedit" />
-                              <Separator prefWidth="40.0" visible="false" />
-                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="135.0" text="Procurar" textFill="WHITE">
-                                 <font>
-                                    <Font name="Arial" size="13.0" />
-                                 </font>
-                              </Button>
-                              <Separator prefWidth="15.0" visible="false" />
-                           </children>
-                        </HBox>
-                        <TableView maxHeight="-Infinity" maxWidth="-Infinity" minHeight="618.0" minWidth="930.0" prefHeight="618.0" prefWidth="1020.0">
-                          <columns>
-                            <TableColumn prefWidth="141.0" text="Cargo" />
-                            <TableColumn prefWidth="189.0" text="Departamento" />
-                              <TableColumn prefWidth="75.0" text="Status" />
-                              <TableColumn prefWidth="267.0" text="Regime de Contratação" />
-                              <TableColumn prefWidth="156.0" text="Faixa Salarial" />
-                              <TableColumn prefWidth="182.0" text="Data de Abertura" />
-                          </columns>
-                        </TableView>
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-         </children>
-      </AnchorPane>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@../Admin/admin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.CandidaturaController">
+    <children>
+        <AnchorPane layoutX="26.0" layoutY="21.0" prefHeight="678.0" prefWidth="1228.0" styleClass="telaaction" stylesheets="@../Admin/admin.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="21.0">
+            <children>
+                <HBox layoutX="291.0" layoutY="56.0" prefHeight="678.0" prefWidth="1228.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <children>
+                        <ToolBar nodeOrientation="LEFT_TO_RIGHT" orientation="VERTICAL" prefHeight="678.0" prefWidth="158.0">
+                            <items>
+                                <Button mnemonicParsing="false" onAction="#btn_vagas" prefHeight="35.0" prefWidth="165.0" text="Lista Vagas" textFill="WHITE" />
+                                <Button mnemonicParsing="false" onAction="#btn_candidatos" prefHeight="35.0" prefWidth="165.0" text="Listar Candidatos" textFill="WHITE" />
+                                <Separator orientation="VERTICAL" prefHeight="520.0" visible="false" />
+                                <Button fx:id="btn_sair" mnemonicParsing="false" onAction="#onClickSair" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE" />
+                            </items>
+                        </ToolBar>
+                        <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
+                        <VBox prefHeight="678.0" prefWidth="1047.0">
+                            <children>
+                                <Separator orientation="VERTICAL" prefHeight="5.0" visible="false" />
+                                <HBox>
+                                    <children>
+                                        <TextField prefHeight="30.0" prefWidth="1000.0" promptText="Buscar" styleClass="lineedit" />
+                                        <Separator prefWidth="40.0" visible="false" />
+                                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="130.0" text="Procurar" textFill="WHITE" />
+                                    </children>
+                                </HBox>
+                                <Separator orientation="VERTICAL" prefHeight="15.0" visible="false" />
+                                <AnchorPane prefHeight="656.0" prefWidth="1031.0">
+                                    <children>
+                                        <AnchorPane fx:id="tab_candidatos" prefHeight="639.0" prefWidth="1031.0">
+                                            <children>
+                                                <TableView fx:id="tabCandidatos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
+                                                    <columns>
+                                                        <TableColumn fx:id="colNome" editable="false" minWidth="-Infinity" prefWidth="299.0" resizable="false" text="Nome" />
+                                                        <TableColumn fx:id="colCpf" editable="false" minWidth="-Infinity" prefWidth="223.0" resizable="false" text="CPF" />
+                                                        <TableColumn fx:id="colEmail" editable="false" minWidth="-Infinity" prefWidth="348.0" resizable="false" text="Email" />
+                                                        <TableColumn fx:id="colFormacao" editable="false" minWidth="-Infinity" prefWidth="151.0" resizable="false" text="Formação" />
+                                                    </columns>
+                                                </TableView>
+                                            </children>
+                                        </AnchorPane>
+                                        <AnchorPane fx:id="tab_vagas" layoutY="-1.0" prefHeight="639.0" prefWidth="1031.0" visible="false">
+                                            <children>
+                                                <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
+                                                    <columns>
+                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="289.0" resizable="false" text="Vaga" />
+                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="218.0" resizable="false" text="Numero de Vagas" />
+                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="168.0" resizable="false" text="Candidatos" />
+                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="199.0" resizable="false" text="Codigo da Vaga" />
+                                                        <TableColumn editable="false" minWidth="-Infinity" prefWidth="139.0" resizable="false" text="Status" />
+                                                    </columns>
+                                                    <columnResizePolicy>
+                                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                    </columnResizePolicy>
+                                                </TableView>
+                                            </children>
+                                        </AnchorPane>
+                                    </children>
+                                </AnchorPane>
+                            </children>
+                        </VBox>
+                        <Separator prefWidth="20.0" visible="false" />
+                    </children>
+                </HBox>
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
